objects/LAT_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Ammount__c</fullName>
        <label>Valor</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pagamento aprovado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNPJ_Fornecedor__c</fullName>
        <label>CNPJ Fornecedor (sem separadores)</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <formula>IF(  (MONTH(PaymentDate__c ) &gt;= 7 &amp;&amp; MONTH(PaymentDate__c ) &lt;= 12),
   
          &quot;FY&quot; &amp;  RIGHT ( TEXT (YEAR(PaymentDate__c)+ 1), 2)  ,
           &quot;FY&quot; &amp; RIGHT (TEXT (YEAR(PaymentDate__c)), 2)
       )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finality__c</fullName>
        <label>Finalidade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contrato</fullName>
                </value>
                <value>
                    <fullName>Festas/Eventos</fullName>
                </value>
                <value>
                    <fullName>Tailor Made</fullName>
                </value>
                <value>
                    <fullName>Festa/Eventos</fullName>
                    <isActive>false</isActive>
                    <label>Festa/Eventos</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GoalNotReached__c</fullName>
        <label>Meta Atingida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDMe__c</fullName>
        <label>IDPagoIMM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDPagoJDE__c</fullName>
        <label>ID Pago JDE</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationStatus__c</fullName>
        <label>Status Integração</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Novo</fullName>
                    <default>true</default>
                    <label>Novo</label>
                </value>
                <value>
                    <fullName>Não Integrado</fullName>
                </value>
                <value>
                    <fullName>Em Processo Integração</fullName>
                </value>
                <value>
                    <fullName>Pendente Integração</fullName>
                </value>
                <value>
                    <fullName>Integrado com Sucesso</fullName>
                </value>
                <value>
                    <fullName>Erro Integração</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <label>Número do contrato</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipLabel>Investimentos, Bonificações e Pagamentos</relationshipLabel>
        <relationshipName>LAT_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investimentos_Bonifica_es_e_Pagam_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentPayment</label>
        <referenceTo>LAT_Payment__c</referenceTo>
        <relationshipLabel>Investimentos, Bonificações e Pagamentos</relationshipLabel>
        <relationshipName>Investimentos_Bonifica_es_e_Pagamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentDateDone__c</fullName>
        <label>Data de pagamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentDateOriginal__c</fullName>
        <label>Data Prevista Pagamento (original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <label>Data prevista de pagamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agrupamento de produto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Pagamento Produto</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_ReferenceProductGrouping__c</referenceTo>
        <relationshipLabel>Investimentos, Bonificações e Pagamentos</relationshipLabel>
        <relationshipName>LAT_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegionalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investimentos_Bonifica_es_e_Pagamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReleaseReason__c</fullName>
        <label>Motivo Liberação</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sku_at_Integration__c</fullName>
        <label>SKU Referência</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_IMM_Linea__c</fullName>
        <label>Status Linha JDE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>C</fullName>
                    <label>Cancelado</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Efetivo</label>
                </value>
                <value>
                    <fullName>Em Aprovação</fullName>
                </value>
                <value>
                    <fullName>Erro Integração</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Integrado</label>
                </value>
                <value>
                    <fullName>Pago</fullName>
                    <isActive>false</isActive>
                    <label>Pago</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <default>true</default>
                    <label>Pendente</label>
                </value>
                <value>
                    <fullName>Previsto</fullName>
                    <isActive>false</isActive>
                    <label>Previsto</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Reprovado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalProductValue__c</fullName>
        <formula>productValue__c *  Volumen__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Produto Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volumen__c</fullName>
        <label>Volume (Caixas Físicas)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WFNumber__c</fullName>
        <formula>TEXT(WorkflowME__r.WorkflowNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nr Atividade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF__c</fullName>
        <formula>IF(WorkflowME__c != null, WorkflowME__r.WF__c, &apos;Sem DA cadastrada no CRM&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Workflow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkflowME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID Atividade</label>
        <referenceTo>LAT_ContractWorflow__c</referenceTo>
        <relationshipLabel>Investimentos, Bonificações e Pagamentos</relationshipLabel>
        <relationshipName>Investimentos_Bonifica_es_e_Pagamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>integrationMessage__c</fullName>
        <label>Mensagem Integração</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>paymentGoals__c</fullName>
        <description>Used to save the html to send on the approval process email.</description>
        <label>Meta</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>productValue__c</fullName>
        <label>Valor Produto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Investimentos, Bonificações e Pagamentos</label>
    <nameField>
        <displayFormat>IBP-{0000}</displayFormat>
        <label>ID Pagamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investimentos, Bonificações e Pagamentos</pluralLabel>
    <recordTypes>
        <fullName>LAT_PagamentoDinheiro</fullName>
        <active>true</active>
        <label>Pagamento Dinheiro</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_PagamentoProduto</fullName>
        <active>true</active>
        <label>Pagamento Produto</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_PaymentGroup</fullName>
        <active>true</active>
        <description>Grouping of payments to approve payments in the external service</description>
        <label>Payment Group</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>